# Celestial-Music

./: .gitignore  CelestialMusic.cabal  CelestialMusic.hs  Display.hs  Input.hs  Main.hs  Music.hs  Sphere.hs  Tomato.hs  license  readme  readme.md  sol.json
